fix: not showing Blockera supported block icon in block inserter search panel

--- a/packages/editor/js/extensions/components/style.scss
+++ b/packages/editor/js/extensions/components/style.scss
@@ -76,7 +76,7 @@
 
 // Block inserter
 
-.block-editor-inserter__block-list {
+.block-editor-inserter__panel-content {
 
 	.blockera-block-icon {
 		display: block;
